--- a/工程師體驗營/JS/event2.css
+++ b/工程師體驗營/JS/event2.css
@@ -19,3 +19,60 @@ img{
 .rocket-3{
     left:630px;
 }
+/* ------------------------- */
+.box{
+    height: 150px;
+    width: 150px;
+    background: green;
+    
+}
+/* 小遊戲 */
+@keyframes fontbulger{
+    0%{
+        top:280px;
+    }
+    30%{
+        top:420px;
+    }
+    100%{
+        top:280px
+    }
+}
+.boxgame{
+    background: red;
+    height: 15px;
+    width: 15px;
+    position: absolute;
+}
+.box1{
+    top:280px;
+    left:250px;
+    animation: fontbulger 2s infinite;
+}
+.box2{
+    top:280px;
+    left:300px;
+    animation: fontbulger 3s infinite;
+}
+.box3{
+    top:280px;
+    left:350px;
+    animation: fontbulger 2.5s infinite;
+}
+.box4{
+    top:280px;
+    left:400px;
+    animation: fontbulger 1.2s infinite;
+}
+.box5{
+    top:280px;
+    left:460px;
+    animation: fontbulger 4s infinite;
+}
+.box6{
+    top:280px;
+    left:480px;
+    animation: fontbulger 4s infinite;
+}
+
+
